Bug 1856596 - Add shopping card borders in mac/linux high contrast mode. r=Gijs,desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D214055

--- a/browser/components/shopping/content/settings.css
+++ b/browser/components/shopping/content/settings.css
@@ -54,6 +54,11 @@
 
     .divider {
       border: var(--shopping-card-border-width) solid var(--shopping-card-border-color);
+
+      @media (prefers-contrast) {
+        border-color: ButtonText;
+        border-width: 1px 0 0 0;
+      }
     }
 
     #shopping-settings-opt-out-section {
